# studio

./: .gitattributes  .gitignore  DESIGN_SPEC.md  Hospital Management Demo-export.json  README.md  audit_actors.py  chatbot-compose-dev.yml  check_attrs.py  check_ooui.py  check_pages.py  check_uc.py  docker-compose.yaml  fix_activity_ops.py  fix_all_sections.py  fix_attrs.py  process_json.js  pyrightconfig.json  regen_prototype.py  sonar-project.properties  test_activity_fix.py  test_all_actors.py  thesis_chapters_4_to_8.tex  tree.txt  update_interfaces.py
chatback/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  shell.nix
chatback/alembic/: env.py
chatback/alembic/versions/: 6850c9079d31_initial_migration.py  add_group_id_to_users.py-old  add_progress_to_chat_state.py  chatbot_schema.py  initial_schema.py-old
chatback/app/: database.py  main.py
chatback/app/agents/: __init__.py
chatback/app/api/: deps.py
chatback/app/core/: auth.py  config.py  database.py  path_utils.py  security.py
chatback/app/crud/: __init__.py  base.py  crud_user.py
chatback/app/db/: base.py  base_class.py  session.py
chatback/app/models/: __init__.py  chat.py  group.py  user.py
chatback/app/routers/: message.py
chatback/app/schemas/: __init__.py  agents.py  chat.py  group.py  token.py  user.py
chatback/app/services/: openai_service.py  vector_store.py
chatback/data-old/poems/: poem_20_20241210_155800.md  poem_5_20241210_161346.md
chatback/data-old/templates/: interview_answered_template.md  srsdoc_template.md
chatback/diagram/: models.py
chatback/diagram/migrations/: 0001_initial.py  0003_alter_edge_rel_alter_node_cls.py
chatback/docs/: activity.json  erd.puml  usecase.md
chatback/models/: chat_message.py
chatback/scripts/: activity.plum  add_activity.py  add_class.py  add_group.py  add_project.py  add_usecase.py  add_user.py  api-test-ad.py  api-test-all.py  api-test-ud.py  chatbot_class.plum  class.plum  create_user.py  del_group.py  del_user.py  groups.py  list_users.py  mod_group.py  mod_user.py  start.sh  test_activity.py  test_class.py  test_studio copy.py  test_studio.py  usecase.plum  users.py  verify_project_system.py  verify_user.py
chatback/tests/: test_agents.py  test_qdrant.py
model/: entrypoint.sh  poetry.toml  pyproject.toml
model/model/diagram/: models.py
model/model/metadata/: models.py
model/model/model/: api.py  asgi.py  auth.py  settings.py  urls.py  wsgi.py
model/model/prompt/: apps.py
prose/metadata/tiantian-class/: .dockerignore  Dockerfile  pyproject.toml
prototypes/: .gitignore  Dockerfile  README.md  dsl_renderer_mvp.py  entrypoint.sh  pyproject.toml  test_pipeline_json.py
prototypes/backend/: api.py
prototypes/backend/generation/: generator.sh  (+4 more)
prototypes/prototypes/: manage.py
(+1593 files in other folders)
