[tool.poetry]
name = "ai4mde-prose-class"
version = "0.1.0"
description = ""
authors = ["Max Boone <max.boone@liacs.leidenuniv.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
nltk = "^3.8.1"
stanfordcorenlp = "^3.9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"